# V-OS

./: README.md  engine.cmake
.github/workflows/: ccpp.yml
src/apps/testharness/: testoskit.cpp
src/kits/: CMakeLists.txt
src/kits/app/: CMakeLists.txt
src/kits/support/: CMakeLists.txt
src/system/: CMakeLists.txt
src/system/kernel_linux/: Team.cpp
src/system/libroot/os/: find_directory.cpp
ttfonts/: README.md
